--- a/NTierCvPro.WebUI/Views/Default/Index.cshtml
+++ b/NTierCvPro.WebUI/Views/Default/Index.cshtml
@@ -72,7 +72,7 @@
                         <a href="mailto:@x.Mail">@x.Mail</a>
                     </div>
                     <p class="lead mb-5">@x.Aciklama</p>
-                    @Html.Action("SosyalMedya")
+                    @Html.Partial("SosyalMedya")
                 </div>
             </section>
         }
@@ -80,32 +80,32 @@
 
         <!-- Experience-->
         <section class="resume-section" id="experience">
-            @Html.Action("Deneyim")
+            @Html.Partial("Deneyim")
         </section>
         <hr class="m-0" />
         <!-- Education-->
         <section class="resume-section" id="education">
-            @Html.Action("Egitimlerim")
+            @Html.Partial("Egitimlerim")
         </section>
         <hr class="m-0" />
         <!-- Skills-->
         <section class="resume-section" id="skills">
-            @Html.Action("Yeteneklerim")
+            @Html.Partial("Yeteneklerim")
         </section>
         <hr class="m-0" />
         <!-- Interests-->
         <section class="resume-section" id="interests">
-            @Html.Action("Hobilerim")
+            @Html.Partial("Hobilerim")
         </section>
         <hr class="m-0" />
         <!-- Awards-->
         <section class="resume-section" id="awards">
-            @Html.Action("Sertifikalar")
+            @Html.Partial("Sertifikalar")
         </section>
         <hr class="m-0" />
         <!-- Contact-->
         <section class="resume-section" id="contact">
-            @Html.Action("Iletisim")
+            @Html.Partial("Iletisim")
         </section>
     </div>
     <!-- Bootstrap core JS-->
