Sertifiklarıma tarihte ekledim.

--- a/NTierCvPro.WebUI/Views/Shared/Components/Sertifikalar/Default.cshtml
+++ b/NTierCvPro.WebUI/Views/Shared/Components/Sertifikalar/Default.cshtml
@@ -8,7 +8,7 @@
         {
             <li>
                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                @x.Aciklama
+                @x.Aciklama - @x.Tarih
             </li>
         }
     </ul>
