--- a/NTierCvPro.WebUI/Views/Shared/Components/Iletisim/Default.cshtml
+++ b/NTierCvPro.WebUI/Views/Shared/Components/Iletisim/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="resume-section-content">
 
     <h2 class="mb-5">Iletişim</h2>
-    <form method="post">
+    <form method="post" action="/Default/Iletisim">
         <label>Ad Soyad</label>
         <input type="text" class="form-control" name="AdSoyad" />
 
