_ViewImports kullandım ve gereksiz kod tekrarından kurtulmuş olduk.

--- a/NTierCvPro.WebUI/Views/Deneyim/Index.cshtml
+++ b/NTierCvPro.WebUI/Views/Deneyim/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model List<Deneyimlerim>
+﻿@model List<Deneyimlerim>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
