--- a/NTierCvPro.WebUI/Views/Admin/Index.cshtml
+++ b/NTierCvPro.WebUI/Views/Admin/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model List<Admin>
+﻿@model List<Admin>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
