--- a/NTierCvPro.WebUI/Views/Egitim/EgitimDuzenle.cshtml
+++ b/NTierCvPro.WebUI/Views/Egitim/EgitimDuzenle.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Egitimlerim
+﻿@model Egitimlerim
 @{
     ViewBag.Title = "EgitimDuzenle";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
