--- a/NTierCvPro.WebUI/Views/Egitim/EgitimEkle.cshtml
+++ b/NTierCvPro.WebUI/Views/Egitim/EgitimEkle.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Egitimlerim
+﻿@model Egitimlerim
 @{
     ViewBag.Title = "EgitimEkle";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
