--- a/NTierCvPro.WebUI/Views/Hobi/HobiEkle.cshtml
+++ b/NTierCvPro.WebUI/Views/Hobi/HobiEkle.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Hobilerim
+﻿@model Hobilerim
 @{
     ViewBag.Title = "HobiDuzenle";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
