--- a/NTierCvPro.WebUI/Views/Sertifika/SertifikaGetir.cshtml
+++ b/NTierCvPro.WebUI/Views/Sertifika/SertifikaGetir.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Sertifikalarim
+﻿@model Sertifikalarim
 @{
     ViewBag.Title = "SertifikaGetir";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
