--- a/NTierCvPro.WebUI/Views/Sertifika/YeniSertifika.cshtml
+++ b/NTierCvPro.WebUI/Views/Sertifika/YeniSertifika.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Sertifikalarim
+﻿@model Sertifikalarim
 @{
     ViewBag.Title = "YeniSertifika";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
