--- a/NTierCvPro.WebUI/Views/SosyalMedya/Index.cshtml
+++ b/NTierCvPro.WebUI/Views/SosyalMedya/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model List<SosyalMedya>
+﻿@model List<SosyalMedya>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
