--- a/NTierCvPro.WebUI/Views/SosyalMedya/SayfaGetir.cshtml
+++ b/NTierCvPro.WebUI/Views/SosyalMedya/SayfaGetir.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model SosyalMedya
+﻿@model SosyalMedya
 @{
     ViewBag.Title = "SayfaGetir";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
