--- a/NTierCvPro.WebUI/Views/Yetenek/YeniYetenek.cshtml
+++ b/NTierCvPro.WebUI/Views/Yetenek/YeniYetenek.cshtml
@@ -1,5 +1,4 @@
-﻿@using NTierCvPro.EntityLayer.Concrete
-@model Yeteneklerim
+﻿@model Yeteneklerim
 @{
     ViewBag.Title = "YeniYetenek";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
