--- a/NTierCvPro.WebUI/Views/_ViewImports.cshtml
+++ b/NTierCvPro.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NTierCvPro.WebUI
 @using NTierCvPro.WebUI.Models
+@using NTierCvPro.EntityLayer.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
