1)Egitimlerim kısmında eksik olmuş listeleme. 2Hakkımda kısmına hakkimda ekleme eklendi.

--- a/NTierCvPro.WebUI/Views/Hakkimda/Index.cshtml
+++ b/NTierCvPro.WebUI/Views/Hakkimda/Index.cshtml
@@ -1,46 +1,87 @@
-﻿@model List<Hakkimda>
+﻿@model Hakkimda
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<br />
-<h2>Hakkımda Düzenleme Sayfası</h2>
-<br />
+@if (Model != null)
+{
+    <br />
+    <h2>Hakkımda Düzenleme Sayfası</h2>
+    <br />
 
-<form method="post">
-    @foreach (var item in Model)
-    {
+    <form method="post">
+
+
         <label>Ad</label>
-        <input type="text" name="Ad" value="@item.Ad" class="form-control" />
+        <input type="text" name="Ad" value="@Model.Ad" class="form-control" />
         <br />
 
         <label>Soyad</label>
-        <input type="text" name="Soyad" value="@item.Soyad" class="form-control" />
+        <input type="text" name="Soyad" value="@Model.Soyad" class="form-control" />
         <br />
 
         <label>Adres</label>
-        <input type="text" name="Adres" value="@item.Adres" class="form-control" />
+        <input type="text" name="Adres" value="@Model.Adres" class="form-control" />
         <br />
 
         <label>Telefon</label>
-        <input type="text" name="Telefon" value="@item.Telefon" class="form-control" />
+        <input type="text" name="Telefon" value="@Model.Telefon" class="form-control" />
         <br />
 
         <label>Mail Adresi</label>
-        <input type="text" name="Mail" value="@item.Mail" class="form-control" />
+        <input type="text" name="Mail" value="@Model.Mail" class="form-control" />
         <br />
 
         <label>Resim</label>
-        <input type="text" name="Resim" value="@item.Resim" class="form-control" />
+        <input type="text" name="Resim" value="@Model.Resim" class="form-control" />
         <br />
 
         <label>Açıklama</label>
-        <textarea rows="5" class="form-control" name="Aciklama">@item.Aciklama</textarea>
-    }
+        <textarea rows="5" class="form-control" name="Aciklama">@Model.Aciklama</textarea>
 
+
+        <br />
+        <button class="btn btn-primary">Güncelle</button>
+
+    </form>
+}
+else
+{
     <br />
-    <button class="btn btn-primary">Güncelle</button>
+    <h2>Hakkımda Ekleme Sayfası</h2>
+    <br />
 
-</form>
+    <form method="post" action="@Url.Action("HakkimdaEkle", "Hakkimda")">
+        <label>Ad</label>
+        <input type="text" name="Ad" class="form-control" />
+        <br />
+
+        <label>Soyad</label>
+        <input type="text" name="Soyad" class="form-control" />
+        <br />
+
+        <label>Adres</label>
+        <input type="text" name="Adres" class="form-control" />
+        <br />
+
+        <label>Telefon</label>
+        <input type="text" name="Telefon" class="form-control" />
+        <br />
+
+        <label>Mail Adresi</label>
+        <input type="text" name="Mail" class="form-control" />
+        <br />
+
+        <label>Resim</label>
+        <input type="text" name="Resim" class="form-control" />
+        <br />
+
+        <label>Açıklama</label>
+        <textarea rows="5" class="form-control" name="Aciklama"></textarea>
+
+        <br />
+        <button class="btn btn-success">Ekle</button>
+    </form>
+}
 
